<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SM_Practica1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="OK">OK</string>
    <string name="Mensaje">Mensaje</string>
    <string name="Usuario">Usuario</string>
    <string name="Clave">Clave</string>
    <string name="Dominio">Dominio</string>
    <string name="Puerto">Puerto</string>

</resources>
