<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentConsole" >
    
    <EditText
        android:id="@+id/console_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/Usuario"
        android:inputType="textPersonName" >
    </EditText>

    <EditText
        android:id="@+id/console_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/console_user"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/Clave"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/console_dominio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/console_pass"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/Dominio" />
        
   <EditText
       android:id="@+id/console_puerto"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/console_dominio"
       android:layout_centerHorizontal="true"
       android:ems="10"
       android:hint="@string/Puerto"
       android:inputType="number" >
    </EditText>
    
    <TextView
        android:id="@+id/console_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/console_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/console_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/console_puerto"
        android:layout_centerHorizontal="true"
        android:text="@string/OK" />

</RelativeLayout>